--- a/src/Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer/Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer.csproj
+++ b/src/Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer/Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
  <PropertyGroup>
-  <VersionPrefix>4.2.0</VersionPrefix>
-  <AssemblyVersion>4.2.0.0</AssemblyVersion>
-  <TargetFramework>netcoreapp3.1</TargetFramework>
+  <VersionPrefix>5.0.0</VersionPrefix>
+  <AssemblyVersion>5.0.0.0</AssemblyVersion>
+  <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
   <AssemblyTitle>Microsoft ASP.NET Core API Versioning</AssemblyTitle>
   <Description>ASP.NET Core MVC API explorer functionality for discovering metadata such as the list of API-versioned controllers and actions, and their URLs and allowed HTTP methods.</Description>
   <RootNamespace>Microsoft.AspNetCore.Mvc.ApiExplorer</RootNamespace>
