--- a/src/Microsoft.AspNetCore.Mvc.Versioning/Microsoft.AspNetCore.Mvc.Versioning.csproj
+++ b/src/Microsoft.AspNetCore.Mvc.Versioning/Microsoft.AspNetCore.Mvc.Versioning.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
  <PropertyGroup>
-  <VersionPrefix>4.2.0</VersionPrefix>
-  <AssemblyVersion>4.2.0.0</AssemblyVersion>
-  <TargetFramework>netcoreapp3.1</TargetFramework>
+  <VersionPrefix>5.0.0</VersionPrefix>
+  <AssemblyVersion>5.0.0.0</AssemblyVersion>
+  <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
   <AssemblyTitle>Microsoft ASP.NET Core API Versioning</AssemblyTitle>
   <Description>A service API versioning library for Microsoft ASP.NET Core.</Description>
   <RootNamespace>Microsoft.AspNetCore.Mvc</RootNamespace>
